# kajima

./: .gitignore  LICENSE  README.md
control_ws/src/bunker_control/: CMakeLists.txt
fast_lp/src/data/: odom_poses.txt  optimized_poses.txt
localization_init/: output.txt
localization_init/src/FAST_LIO/: CMakeLists.txt
localization_init/src/image_get/: CMakeLists.txt  package.xml
localization_init/src/image_get/src/: project.cpp  project2.cpp  project3.cpp  project4.cpp  project_yuan.cpp
localization_init/src/json/: target.json
plan_ws/: z_tf.sh
plan_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
plan_ws/src/local_plan/: CMakeLists.txt
scripts/: 1.sh  2.sh  3.sh  6.sh  7.sh  8.sh  config  coordinates.json  kajima.desktop  kajima0_can.sh  kajima1_livox.sh  kajima2_bunker_sdk.sh  kajima4_localization.sh  kajima5_nav.sh  localization.sh  mapUtils.py  odometry.txt  one-touch_start.py  output.txt  scp_file.sh  setup.sh  start.desktop  subTopic.py  traceView.py  ws_bunker.service  ws_bunker.sh  ws_livox.serice  ws_livox.sh  ws_webui.service  ws_webui.sh
scripts/car/: Image_clear.py  main.py  main.py.bak  one-touch_start.py
scripts/car/file/: file_utils.py
scripts/car/media/: media_record.py  media_record.py.bak  screen_shot.py
scripts/car/time_utils/: timed_tasks.py
scripts/rviz/: aloam_velodyne.rviz  loam_livox.rviz
seibertron/: target.json
seibertron/proxy/: __init__.py  config.ini  config.py  config.py.bak
seibertron/proxy/camera/: main.py
seibertron/proxy/common/: Snowflake.py  auth_decorator.py  result.py
(+140 files in other folders)
